# BlazeFS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: linux-compilation.yml  macos-compilation.yml  windows-compilation.yml
cmake/: AddGitSubmodule.cmake
examples/: main.cpp
include/: vfs.hpp
include/BlazeFS/: BlazeFS.hpp
include/BlazeFS/internal/: types.hpp
include/blaze/BlazeFS/: BlazeFS.hpp
include/blaze/BlazeFS/internal/: types.hpp
src/: BlazeFS.cpp  vfs.cpp
tests/: CMakeLists.txt  cd.cpp  create_dir.cpp  create_symlink.cpp  exists.cpp  is_directory.cpp  list_dir.cpp  main.cpp  read.cpp  remove.cpp  reserve.cpp  write.cpp
